cater for duplicates is field delimiters for tweets and users

--- a/AGTwit.Test/AGTwit.Test.csproj
+++ b/AGTwit.Test/AGTwit.Test.csproj
@@ -18,7 +18,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="tweetSample2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="tweet.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="userSample2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="user.txt">
